--- a/cluster/apps/network/error-pages/middleware.yaml
+++ b/cluster/apps/network/error-pages/middleware.yaml
@@ -3,7 +3,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
   name: error-pages
-  namespace: networking
+  namespace: network
 spec:
   errors:
     status:
