gotta sync the charts too

--- a/cluster/base/flux-system/gotk-sync.yaml
+++ b/cluster/base/flux-system/gotk-sync.yaml
@@ -12,6 +12,8 @@ spec:
   ignore: |
     # exclude all
     /*
+    # include charts dir
+    !/charts
     # include deploy dir
     !/cluster
     # exclude file extensions from deploy dir
