haven't used one of these dependsOn yet. fancy.

--- a/cluster/apps/network/error-pages/helm-release.yaml
+++ b/cluster/apps/network/error-pages/helm-release.yaml
@@ -16,7 +16,7 @@ spec:
       interval: 5m
   dependsOn:
     - name: traefik
-      namespace: networking
+      namespace: network
   values:
     image:
       repository: ghcr.io/tarampampam/error-pages
