--- a/cluster/apps/network/external-dns/cloudflare-api-key.sec.yaml
+++ b/cluster/apps/network/external-dns/cloudflare-api-key.sec.yaml
@@ -2,58 +2,58 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: cloudflare-api-key
-  namespace: network
+    name: cloudflare-api-key
+    namespace: network
 stringData:
-  cloudflare_api_key: ENC[AES256_GCM,data:CkwqHArSS4//WG5ZhkckEDYIQOojB3NloVbPZY0apwZvx3loVGCggw==,iv:fKi9I/VbAc3q1S27CJ1Oyg4FydEgxfu+FzGNfVQ8CsI=,tag:Z1Q08AtSKuMrmmeMc8iNYQ==,type:str]
+    cloudflare_api_token: ENC[AES256_GCM,data:cInzWLUHcuG0lLxSX04V2WEDQMfqrXBpuBlNX001ddV1u1HCH3CdHg==,iv:cB2eoJncpBZpbFMbhYSfMHyxhXBUITWVIrCZjHtkyxs=,tag:c+/RTpGGSkWkme44JLGWMw==,type:str]
 sops:
-  kms: []
-  gcp_kms: []
-  azure_kv: []
-  hc_vault: []
-  age: []
-  lastmodified: "2021-08-18T20:18:25Z"
-  mac: ENC[AES256_GCM,data:cuVwmKBY6pF5806UKVfnnjTOFPAlizIGgM/oYxYh7ag2izVBP+AcsnT5eHya/izsxlF88WTKFL7h6Xfx61ZXnbWhiXBzbLV7PnyocIYl/LJdxtQ+xM/1nRxC0/4h8quOVcHsyojLOEtkvSXkKHjn9/ArgdhNtbcQUUVdv+4a88c=,iv:tIn75RBfxeaNaPLJHEeyzuDUZcbZjM0VOspRHbVaN6M=,tag:5F7ITmvsGEzqZ4HqVvyZEA==,type:str]
-  pgp:
-    - created_at: "2021-08-18T20:17:45Z"
-      enc: |
-        -----BEGIN PGP MESSAGE-----
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age: []
+    lastmodified: "2021-08-18T22:25:31Z"
+    mac: ENC[AES256_GCM,data:w+cW/ChpLPmh+qUWOthi4nkivR78Pi76X2QQM2qXges8OOcXevfsG7MQxZsqPQy9al3VSX/YeksPnIjQcQxPqb3VaiAQD66wMnjrsZjTDB1qqVVYSvpm9ZSCdVIZq+CcM3aebn/O+V8MJ9ntgC5kWkffXaLAZr+aGN/iiFF6eUs=,iv:LL6nB0PlSNOKn1kXILkZ7MsD2lOLp8YE6Ul8q3J7Tpc=,tag:08mEXe4EG6EXc5sX8N7PBA==,type:str]
+    pgp:
+        - created_at: "2021-08-18T20:17:45Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
 
-        hQIMA8oSIqtHvng8AQ//RhykHp2XTj/UUsXpSzVLcJ7jaIjP7LyuWnVEVdcASad/
-        1i6EZiMCjQHbgPGHIw8yRHOKf4K4x/G80Dt3pJOmDz4eFMyNOrlKNkY+o4shEU3Y
-        SizAGxCgMapFEqLPRP2h1h5fLwy57PhJS7HqXJQdpiLGl6zl8ffNMOyG+kCFymtR
-        7JTLXNXen297K4nERB/en4rD2DuVnC/h6QbxmJR+LGAk+ExFD/zynfzBs0zIhANJ
-        +hS0M0aQJHDs2/LPvd1fmbL0ZtdWfvvmtvRMrG6ndal1ZnAG9Bym8JHkwXM8/5bg
-        E6rnlUPQV9fIRZV3RxujHPdFRJdmtOceWFPNGJgNYPMpUrG9PRQtJirDFK88RrHB
-        DzoyDoSDaWYay9h44qlWrKwMGgA5Wzb8aU9wVDRupzckUrJvp3hAjQJADosT5TXN
-        5WzXjMXhB2bYjgALegmIYLsO8dVEBBRPdj3ASdHegor2ofSxpyj7tWeBas9PK050
-        kWv7hSjRYTIwj3u6Yf2kTjKjBt6dqi5FGLBr/KD3r67SJPhYw2/skcicmVUWVr0i
-        PTLNApWTMKaOD/vNoPs8PW/xBpjNXuGvUj1DlgMNLqvP7QF0Dc/cdFmO0d5l6CHS
-        TFcd3zFGwVEJdUtnYMuEDlULDp51NjS9J0TtLZAlptNxD41qqHlscXUf7/+VyTDS
-        XgEmjm1sMN7eBfirteGCcMnYcGwb8+Bh89X9Yj5RIEA0/0sRuTUw6E+IARAxQ7W1
-        J07VPwjuKD3amMk8K+fggv5JBPJttWUsZf8j/OLl+g0f/QANufr5KvghQMnYvxY=
-        =Nd0O
-        -----END PGP MESSAGE-----
-      fp: DA8002060402EC39B195451D5CED80362B5A4EF2
-    - created_at: "2021-08-18T20:17:45Z"
-      enc: |
-        -----BEGIN PGP MESSAGE-----
+            hQIMA8oSIqtHvng8AQ//RhykHp2XTj/UUsXpSzVLcJ7jaIjP7LyuWnVEVdcASad/
+            1i6EZiMCjQHbgPGHIw8yRHOKf4K4x/G80Dt3pJOmDz4eFMyNOrlKNkY+o4shEU3Y
+            SizAGxCgMapFEqLPRP2h1h5fLwy57PhJS7HqXJQdpiLGl6zl8ffNMOyG+kCFymtR
+            7JTLXNXen297K4nERB/en4rD2DuVnC/h6QbxmJR+LGAk+ExFD/zynfzBs0zIhANJ
+            +hS0M0aQJHDs2/LPvd1fmbL0ZtdWfvvmtvRMrG6ndal1ZnAG9Bym8JHkwXM8/5bg
+            E6rnlUPQV9fIRZV3RxujHPdFRJdmtOceWFPNGJgNYPMpUrG9PRQtJirDFK88RrHB
+            DzoyDoSDaWYay9h44qlWrKwMGgA5Wzb8aU9wVDRupzckUrJvp3hAjQJADosT5TXN
+            5WzXjMXhB2bYjgALegmIYLsO8dVEBBRPdj3ASdHegor2ofSxpyj7tWeBas9PK050
+            kWv7hSjRYTIwj3u6Yf2kTjKjBt6dqi5FGLBr/KD3r67SJPhYw2/skcicmVUWVr0i
+            PTLNApWTMKaOD/vNoPs8PW/xBpjNXuGvUj1DlgMNLqvP7QF0Dc/cdFmO0d5l6CHS
+            TFcd3zFGwVEJdUtnYMuEDlULDp51NjS9J0TtLZAlptNxD41qqHlscXUf7/+VyTDS
+            XgEmjm1sMN7eBfirteGCcMnYcGwb8+Bh89X9Yj5RIEA0/0sRuTUw6E+IARAxQ7W1
+            J07VPwjuKD3amMk8K+fggv5JBPJttWUsZf8j/OLl+g0f/QANufr5KvghQMnYvxY=
+            =Nd0O
+            -----END PGP MESSAGE-----
+          fp: DA8002060402EC39B195451D5CED80362B5A4EF2
+        - created_at: "2021-08-18T20:17:45Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
 
-        hQIMA8ORz3KkY6O4ARAAg8wjpkA1IeTzC1StCYuadJkc1Ht4ZQDpVTUxQ0V88l0+
-        8Ba55p85LwFOHPgMTv7VESv1jpFq6pOJzECQQ4IoZaKYEJNCR9lw3pvbJf7JrxKf
-        UOP/LjzGrVIbpSqd1ICLC9YZWU91YFyzRicCY9X9Pci13BXgBVlveHAo0cef9qUl
-        y/kIaYdHjQx4JwGaVluu8Lz8IcjqHveay/3U2GKJnPMDAux5Qcpg+EOsbm0STFqU
-        Pal5jn2YR94BYhoqvsumEjfiDvLMao2yr7g6RrlfmHjG4npAEtMgLcrLNZWb4MdA
-        IiDPVnXmSCw0ekm1HsAE5eDmn7tk9N+jLF2SSIm3Cm5+NLGJo5sb2RODlHZqbBBY
-        6oCpLUMA+BKeGQ8BxwJJZuyyiTFMJ5FPnyrDZkOVDzGejxZbPdmZycf7ckBr/d8N
-        luBS4nBtbaChP3eBMcbqG+iiQwalvIgo/jXPisn/Cj6itq1kQEmfDOmI5/p2XsyV
-        8JKiih7Cor4SxtwIKTgJJYJN4ACVledNQmIQAShEjR5HDchUHgqOWAt3i2ix3h++
-        T2BecxeVloadyq9MzYtVAwW8/HF9wfol3BLiWPFPMYX5dCLlsOtPAiK3NMK5MC8W
-        xz4hUM1JmHNusXQbX/KsmuPXD1UVIZ1LoXlc9wpPSF8QUipoobZXpSomtPbY2XHS
-        XgHY4lcvMIE98c7vuoBatB8WveLfjQrtYQa/hNa5+95mWmAfXjGbTmAq7ymeiTUH
-        k5KL+jV3Y0JfD0b8zu/E4KXMO5a1f1iMmvcs3TyDJfTu3nckflVDMJkSqOvBowU=
-        =t6he
-        -----END PGP MESSAGE-----
-      fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
-  encrypted_regex: ^(data|stringData)$
-  version: 3.7.1
+            hQIMA8ORz3KkY6O4ARAAg8wjpkA1IeTzC1StCYuadJkc1Ht4ZQDpVTUxQ0V88l0+
+            8Ba55p85LwFOHPgMTv7VESv1jpFq6pOJzECQQ4IoZaKYEJNCR9lw3pvbJf7JrxKf
+            UOP/LjzGrVIbpSqd1ICLC9YZWU91YFyzRicCY9X9Pci13BXgBVlveHAo0cef9qUl
+            y/kIaYdHjQx4JwGaVluu8Lz8IcjqHveay/3U2GKJnPMDAux5Qcpg+EOsbm0STFqU
+            Pal5jn2YR94BYhoqvsumEjfiDvLMao2yr7g6RrlfmHjG4npAEtMgLcrLNZWb4MdA
+            IiDPVnXmSCw0ekm1HsAE5eDmn7tk9N+jLF2SSIm3Cm5+NLGJo5sb2RODlHZqbBBY
+            6oCpLUMA+BKeGQ8BxwJJZuyyiTFMJ5FPnyrDZkOVDzGejxZbPdmZycf7ckBr/d8N
+            luBS4nBtbaChP3eBMcbqG+iiQwalvIgo/jXPisn/Cj6itq1kQEmfDOmI5/p2XsyV
+            8JKiih7Cor4SxtwIKTgJJYJN4ACVledNQmIQAShEjR5HDchUHgqOWAt3i2ix3h++
+            T2BecxeVloadyq9MzYtVAwW8/HF9wfol3BLiWPFPMYX5dCLlsOtPAiK3NMK5MC8W
+            xz4hUM1JmHNusXQbX/KsmuPXD1UVIZ1LoXlc9wpPSF8QUipoobZXpSomtPbY2XHS
+            XgHY4lcvMIE98c7vuoBatB8WveLfjQrtYQa/hNa5+95mWmAfXjGbTmAq7ymeiTUH
+            k5KL+jV3Y0JfD0b8zu/E4KXMO5a1f1iMmvcs3TyDJfTu3nckflVDMJkSqOvBowU=
+            =t6he
+            -----END PGP MESSAGE-----
+          fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.1
