add my other domains

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: flux-system
 stringData:
   SECRET_DOMAIN: ENC[AES256_GCM,data:7PdZUHFhoaMIXQKr,iv:wY5azxHD+Kgck/XJ1Ty1MYjxkqAuMr7+lxYz1FoXWAA=,tag:OHKIFnNli/GO/vp1uchAMQ==,type:str]
+  SECRET_SHORT_DOMAIN: ENC[AES256_GCM,data:0wxiMizt7w==,iv:73+CAlJctbFcquQ7RZTyxNTiWMH/wk1q4PjKKOIYGWQ=,tag:1IkIrPPwQC7PAA32W3Qcew==,type:str]
+  SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:fiLCXhPnYq5KjAeB,iv:0010dUNU0JwYX80YCOrJYoj2MEuxtMrWvdxW9rSvCOA=,tag:vnIFNapIypZAoRcgYL4XVw==,type:str]
   SECRET_EMAIL: ENC[AES256_GCM,data:6V6TB94qSRABzlWnP2b2ozA=,iv:/z0uOCglc5lfpbbyyybQGbfb9i8plI5fjlKMfNIJMJA=,tag:wEvuvDwf4il1QJvsqXPerA==,type:str]
   SECRET_DISCORD_KURED_WEBHOOK_URL: ENC[AES256_GCM,data:GhlAUKKQZi8PVzfH7+NCNrrtgco9redOBVWqt32WeaojRthq0FV1KjwbR+9L8NgsYIIHws9cEPkeXzcYiMW2CbyzYM37tLSJhQ/4Mt7zrK4tfGOn65ak3XxdzVR0f5dO4N7utld6mtCE+UqkMJovDWaI5D0Yo3Bx0P0uodqn,iv:g/hYI+iXdsJkdfbZpAFmfE2WVHZv238kIlAAOp5euNI=,tag:6Hw2V0gaEa1rauqC26T44A==,type:str]
   SECRET_AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:KDDYtNQc6WrUe/3ZoCRab89nPIcqdWw0EcApQRzh9ER5KXXF7gQhXzCJuVmvLoF+,iv:KWDPQjNg3wc2QiUJafTHwVikwxOjcSHGSkBXkM1Niu0=,tag:3Wy8FBNda2LdyfiFXCcbaw==,type:str]
@@ -58,8 +60,8 @@ sops:
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-18T20:24:46Z"
-  mac: ENC[AES256_GCM,data:tHnSbOOn945+vgCAdKPcaniKW5tdpj5/ljNj13j6XDoGkyY5rvk87wdF52UNDWus5OyjUPfqms439dlWs5CJraXYUPfkqZBMm67NtqKYTWVk33kNK2Q8q+AjJG/shg+tbBKFL1dURzfJHoOrliuqVDoHFcy6b7vEOEHz1rL3Axc=,iv:yVnQXtagZVwaGXIrAEmPUucQUfKYVOvPc4Fh03YfnV8=,tag:IwyJVu2DYTA0zk9KAvwJKg==,type:str]
+  lastmodified: "2021-08-19T14:11:53Z"
+  mac: ENC[AES256_GCM,data:MqUPxypLjgxtPh7au/gSZI/B7acIGFvOVHSr2UYp3rci3iWx0eHreBzrvbf2n7yH6ihkIFbusXrwyeV+R2l3Z4OBZCxLCtKAZD7fZ4KUDY9to9mjGw781UY4KP0Ggy7d0YKy176PUCazHel4sKdOEV1pZkRkCnmCIGCy6l/hpYk=,iv:1AeYtt1Vtyg/RXa2ZBlwuBWc54kh5TesQVMay0ldjZg=,tag:TaLkT6vAQh49t88MFQ/r3A==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
