--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -54,14 +54,17 @@ stringData:
   SECRET_MONICA_DB_USERNAME: ENC[AES256_GCM,data:+HPYPVgp,iv:OHYCEwB2O5jJqNpyDqX2INQ/djtLE+txp8DBYetBi9c=,tag:VWN8tiFJr0ckQkw3KHoDXQ==,type:str]
   SECRET_MONICA_DB_PASSWORD: ENC[AES256_GCM,data:sl42D2aXS1cosIzjPK8=,iv:Iy3RCySoXtBKX+h1xslC/CdfTArqoUzLQy8qqTNqXXs=,tag:lrogJ/lau2nPqvafYKPUIw==,type:str]
   SECRET_MONICA_DB_ROOTPASSWORD: ENC[AES256_GCM,data:P9TwqJa54RJjDt1MGEY=,iv:CCiwBg8vyvbn5+VHkRC7ogU+M0J7xkIdQGwbbKisiqg=,tag:1uiXGW+DW+vxzEXhnT95KQ==,type:str]
+  SECRET_NEXTCLOUD_POSTGRES_PASSWORD: ENC[AES256_GCM,data:Icq/DpxIjl5kZc34KmQx4Q==,iv:fXnfF3sAxMncHrCgr2c58KBKSAyYoOpM1YQaHGu0qgE=,tag:iUzu97tXyLSMRrKFNqNVGQ==,type:str]
+  SECRET_NEXTCLOUD_ADMIN_USER: ENC[AES256_GCM,data:LARuY1I=,iv:bZst8y6pELi4pLG5rfYKHAENeCnjnuS82YMWKzkhSCg=,tag:jll0FQ5iin0eSS3guqYUrw==,type:str]
+  SECRET_NEXTCLOUD_ADMIN_PASSWORD: ENC[AES256_GCM,data:P4xnS/6WB2982JCa2gA4Ww==,iv:2TevmRKdMcJz6VciG8zn7ykKNN435zyyfrwPNk9IV/A=,tag:jc8/o9ChMK4KL8A9HftKzQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-19T14:11:53Z"
-  mac: ENC[AES256_GCM,data:MqUPxypLjgxtPh7au/gSZI/B7acIGFvOVHSr2UYp3rci3iWx0eHreBzrvbf2n7yH6ihkIFbusXrwyeV+R2l3Z4OBZCxLCtKAZD7fZ4KUDY9to9mjGw781UY4KP0Ggy7d0YKy176PUCazHel4sKdOEV1pZkRkCnmCIGCy6l/hpYk=,iv:1AeYtt1Vtyg/RXa2ZBlwuBWc54kh5TesQVMay0ldjZg=,tag:TaLkT6vAQh49t88MFQ/r3A==,type:str]
+  lastmodified: "2021-08-19T16:09:36Z"
+  mac: ENC[AES256_GCM,data:UvfR7VzDOJy9s39ZPbtR2OWz9vvzeHZgXZb0ioIPE6uvz6pm49gsOoRWGX7ds4ei7snOFNES4gUw2o+dQpqXG+VqdCKQhSSvMHm6QAga18yZWlkVKwe2VclHlicg/5FkfNtbhZfm4sN/raJs+M3ujCD1RIf5iaq3gpH7vFUAvx8=,iv:FX70wmVmwXmNtg2bScnDOpJEwqQ8DTZL9/ETLoWMgpw=,tag:xeFGT/D7DHgUPgGE7Nx0ng==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
