--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -32,6 +32,7 @@ resources:
   - mailu-charts.yaml
   - minio-charts.yaml
   - nicholaswilde-charts.yaml
+  - nextcloud-charts.yaml
   - oauth2-proxy-charts.yaml
   - ory-charts.yaml
   - pomerium-charts.yaml
