turn off probes momentarily

--- a/cluster/apps/collab/nextcloud/helm-release.yaml
+++ b/cluster/apps/collab/nextcloud/helm-release.yaml
@@ -71,6 +71,11 @@ spec:
       password: ${SECRET_NEXTCLOUD_POSTGRES_PASSWORD}
       database: nextcloud
 
+    livenessProbe:
+      enabled: false
+    readinessProbe:
+      enabled: false
+
     cronjob:
       enabled: true
 
