--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -57,14 +57,15 @@ stringData:
   SECRET_NEXTCLOUD_POSTGRES_PASSWORD: ENC[AES256_GCM,data:Icq/DpxIjl5kZc34KmQx4Q==,iv:fXnfF3sAxMncHrCgr2c58KBKSAyYoOpM1YQaHGu0qgE=,tag:iUzu97tXyLSMRrKFNqNVGQ==,type:str]
   SECRET_NEXTCLOUD_ADMIN_USER: ENC[AES256_GCM,data:LARuY1I=,iv:bZst8y6pELi4pLG5rfYKHAENeCnjnuS82YMWKzkhSCg=,tag:jll0FQ5iin0eSS3guqYUrw==,type:str]
   SECRET_NEXTCLOUD_ADMIN_PASSWORD: ENC[AES256_GCM,data:P4xnS/6WB2982JCa2gA4Ww==,iv:2TevmRKdMcJz6VciG8zn7ykKNN435zyyfrwPNk9IV/A=,tag:jc8/o9ChMK4KL8A9HftKzQ==,type:str]
+  SECRET_HIKVISION_VIEWER_PASSWORD: ENC[AES256_GCM,data:myF2KNCI4/gmNa8fLjk=,iv:j8IwE43g4t28LYJeU9ut3/WQcZ7hlV3/8fqAERcJudA=,tag:BBdVuOl9tqE2LVWvlkKRFw==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-19T16:09:36Z"
-  mac: ENC[AES256_GCM,data:UvfR7VzDOJy9s39ZPbtR2OWz9vvzeHZgXZb0ioIPE6uvz6pm49gsOoRWGX7ds4ei7snOFNES4gUw2o+dQpqXG+VqdCKQhSSvMHm6QAga18yZWlkVKwe2VclHlicg/5FkfNtbhZfm4sN/raJs+M3ujCD1RIf5iaq3gpH7vFUAvx8=,iv:FX70wmVmwXmNtg2bScnDOpJEwqQ8DTZL9/ETLoWMgpw=,tag:xeFGT/D7DHgUPgGE7Nx0ng==,type:str]
+  lastmodified: "2021-08-19T19:20:10Z"
+  mac: ENC[AES256_GCM,data:fUgtHRAzlW07N6ptYn08VPDKeql6OuB8dp3vOOB3h2YW8yysRk6DukrPsH852eVUgJCP6h8M4P3UZM3sBqkEP02SWYraasNLo7VKR3T8CsUhBQZwIuKJt9artB3LPAmFH5U72+pDbdKrEKmuzJcf62Z14BBwDbur0Z7BLiY59E0=,iv:raUiAysgsySJZaDYTy6+KgMLJzjy2obfAQxradVsc0o=,tag:Scz4xupQWatorV/nPtTW5Q==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
