--- a/cluster/apps/home/kustomization.yaml
+++ b/cluster/apps/home/kustomization.yaml
@@ -2,10 +2,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- esphome
-- home-assistant
-- mealie
-- node-red
-- vernemq
-- zigbee2mqtt
-- zwavejs2mqtt
+  - _pvc
+  - esphome
+  - frigate
+  - home-assistant
+  - mealie
+  - node-red
+  - vernemq
+  - zigbee2mqtt
+  - zwavejs2mqtt
