add some other domains to certmanager

--- a/cluster/core/cert-manager/letsencrypt-production.yaml
+++ b/cluster/core/cert-manager/letsencrypt-production.yaml
@@ -5,13 +5,15 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: ryan@ryanholt.net
+    email: ${SECRET_EMAIL}
     privateKeySecretRef:
       name: letsencrypt-prod
     solvers:
       - selector:
           dnsZones:
             - "${SECRET_DOMAIN}"
+            - "${SECRET_SHORT_DOMAIN}"
+            - "${SECRET_PUBLIC_DOMAIN}"
         dns01:
           cloudflare:
             email: "${SECRET_EMAIL}"
