--- a/cluster/apps/home/_pvc/home-nfs-tank-share.yaml
+++ b/cluster/apps/home/_pvc/home-nfs-tank-share.yaml
@@ -20,7 +20,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: home-nfs-tank-share-pvc
-  namespace: collab
+  namespace: home
 spec:
   accessModes:
     - ReadWriteMany
