--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -93,10 +93,10 @@ spec:
         backyard-patio-door:
           ffmpeg:
             inputs:
-            - path: rtsp://viewer:${SECRET_HIKVISION_VIEWER_PASSWORD}@10.50.0.100:554/Streaming/Channels/ID/?transportmode=multicast
+            - path: rtsp://viewer:${SECRET_HIKVISION_VIEWER_PASSWORD}@10.50.0.100:554/Streaming/Channels/1
               roles:
               - detect
-            - path: rtsp://viewer:${SECRET_HIKVISION_VIEWER_PASSWORD}@10.50.0.100:554/Streaming/Channels/ID/?transportmode=multicast
+            - path: rtsp://viewer:${SECRET_HIKVISION_VIEWER_PASSWORD}@10.50.0.100:554/Streaming/Channels/1
               roles:
               - clips
               - record
