disable ffmpeg options

--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -80,14 +80,14 @@ spec:
             min_area: 1000
             max_area: 10000
             threshold: 0.7
-      ffmpeg:
-        hwaccel_args:
-        - -hwaccel
-        - vaapi
-        - -hwaccel_device
-        - /dev/dri/renderD128
-        - -hwaccel_output_format
-        - yuv420p
+      # ffmpeg:
+      #   hwaccel_args:
+      #   - -hwaccel
+      #   - vaapi
+      #   - -hwaccel_device
+      #   - /dev/dri/renderD128
+      #   - -hwaccel_output_format
+      #   - yuv420p
       cameras:
         # --
         backyard-patio-door:
