--- a/cluster/apps/collab/nextcloud/helm-release.yaml
+++ b/cluster/apps/collab/nextcloud/helm-release.yaml
@@ -62,6 +62,11 @@ spec:
           $CONFIG = array (
             'trusted_proxies' => array('${NETWORK_K8S_CLUSTER_CIDR}')
           );
+        protocol.config.php: |-
+          <?php
+          $CONFIG = array (
+            'overwriteprotocol' => 'https'
+          );
       mail:
         enabled: true
         fromAddress: cloud
