attempt to disable flux env substitution for middleware

--- a/cluster/apps/collab/nextcloud/middleware.yaml
+++ b/cluster/apps/collab/nextcloud/middleware.yaml
@@ -3,6 +3,8 @@ kind: Middleware
 metadata:
   name: nextcloud-dav-redirect
   namespace: collab
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
 spec:
   redirectRegex:
     regex: https://(.*)/.well-known/(card|cal)dav
