flip to mailgun.org for ssl purposes

--- a/cluster/apps/collab/nextcloud/helm-release.yaml
+++ b/cluster/apps/collab/nextcloud/helm-release.yaml
@@ -77,7 +77,7 @@ spec:
         fromAddress: cloud
         domain: ${SECRET_DOMAIN}
         smtp:
-          host: smtp.mailgun.com
+          host: smtp.mailgun.org
           secure: ssl
           port: 465
           name: ${SECRET_MAILGUN_USERNAME}
