force kasten pods to run on workers

--- a/cluster/apps/kasten-io/k10/kustomization.yaml
+++ b/cluster/apps/kasten-io/k10/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - policies
   - profiles
   - prometheus-rules
+  - pod-spec-override.yaml
   - service-monitors
   - helm-release.yaml
   - k10-secrets.enc.yaml
