--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -19,6 +19,7 @@ resources:
   - gitea-charts.yaml
   - grafana-charts.yaml
   - grafana-loki-charts.yaml
+  - hajimari-charts.yaml
   - influxdata-charts.yaml
   - infracloudio-charts.yaml
   - ingress-nginx-charts.yaml
