--- a/cluster/apps/home/hajimari/helm-release.yaml
+++ b/cluster/apps/home/hajimari/helm-release.yaml
@@ -8,9 +8,9 @@ spec:
   interval: 5m
   chart:
     spec:
-      # renovate: registryUrl=https://toboshii.github.io/hajimari
+      # renovate: registryUrl=https://hajimari.com
       chart: hajimari
-      version: 1.0.0
+      version: 1.1.0
       sourceRef:
         kind: HelmRepository
         name: hajimari-charts
