--- a/cluster/apps/home/hajimari/helm-release.yaml
+++ b/cluster/apps/home/hajimari/helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      # renovate: registryUrl=https://hajimari.com
+      # renovate: registryUrl=https://hajimari.io
       chart: hajimari
       version: 1.1.0
       sourceRef:
