--- a/cluster/apps/monitoring/botkube/helm-release.yaml
+++ b/cluster/apps/monitoring/botkube/helm-release.yaml
@@ -5,7 +5,6 @@ metadata:
   name: botkube
   namespace: monitoring
 spec:
-  releaseName: botkube
   interval: 5m
   chart:
     spec:
@@ -19,34 +18,71 @@ spec:
       interval: 5m
   values:
     image:
-      #   repository: infracloudio/botkube
-      #   tag: v0.10.0
-      # Needed for Discord support until merge
-      # https://github.com/infracloudio/botkube/pull/268
       repository: ghcr.io/infracloudio/botkube
-      tag: v0.12.1
-      pullPolicy: Always
+    communications:
+      discord:
+        enabled: true
+        token: "${SECRET_BOTKUBE_DISCORD_TOKEN}"
+        botid: "${SECRET_BOTKUBE_DISCORD_BOT_ID}"
+        channel: "${SECRET_BOTKUBE_DISCORD_CHANNEL_ID}"
     serviceMonitor:
       enabled: true
     config:
+      recommendations: false
       settings:
-        clustername: k8s
+        clustername: home-cluster
+        kubectl:
+          enabled: true
+          restrictAccess: true
+          commands:
+            verbs:
+              [
+                "api-resources",
+                "api-versions",
+                "cluster-info",
+                "describe",
+                "diff",
+                "explain",
+                "get",
+                "logs",
+                "top",
+                "auth",
+              ]
+            resources:
+              [
+                "deployments",
+                "pods",
+                "namespaces",
+                "daemonsets",
+                "statefulsets",
+                "storageclasses",
+                "nodes",
+              ]
       resources:
-        - name: v1/pods                # Name of the resources e.g pod, deployment, ingress, etc. (Resource name must be in singular form)
+        - name: v1/pods
           namespaces:
             include:
-              - all
-            ignore:                 # List of namespaces to be ignored (omitempty), used only with include: all
-              - rook-ceph                    # example : include [all], ignore [x,y,z]
+              - default
+              - collab
+              - home
               - kube-system
-              - kasten-io
-          events:                   # List of lifecycle events you want to receive, e.g create, update, delete, error OR all
+              - media
+              - monitoring
+              - network
+          events:
             - create
             - delete
+            - error
         - name: v1/services
           namespaces:
             include:
-              - all
+              - default
+              - collab
+              - home
+              - kube-system
+              - media
+              - monitoring
+              - network
           events:
             - create
             - delete
@@ -54,33 +90,43 @@ spec:
         - name: apps/v1/deployments
           namespaces:
             include:
-              - all
+              - default
+              - collab
+              - home
+              - kube-system
+              - media
+              - monitoring
+              - network
           events:
             - create
             - update
             - delete
             - error
-          updateSetting:
-            includeDiff: true
-            fields:
-              - spec.template.spec.containers[*].image
         - name: apps/v1/statefulsets
           namespaces:
             include:
-              - all
+              - default
+              - collab
+              - home
+              - kube-system
+              - media
+              - monitoring
+              - network
           events:
             - create
             - update
             - delete
             - error
-          updateSetting:
-            includeDiff: true
-            fields:
-              - spec.template.spec.containers[*].image
         - name: networking.k8s.io/v1beta1/ingresses
           namespaces:
             include:
-              - all
+              - default
+              - collab
+              - home
+              - kube-system
+              - media
+              - monitoring
+              - network
           events:
             - create
             - delete
@@ -96,7 +142,13 @@ spec:
         - name: v1/namespaces
           namespaces:
             include:
-              - all
+              - default
+              - home
+              - collab
+              - kube-system
+              - media
+              - monitoring
+              - network
           events:
             - create
             - delete
@@ -104,7 +156,13 @@ spec:
         - name: v1/persistentvolumes
           namespaces:
             include:
-              - all
+              - default
+              - gaming
+              - home
+              - kube-system
+              - media
+              - monitoring
+              - network
           events:
             - create
             - delete
@@ -112,15 +170,13 @@ spec:
         - name: v1/persistentvolumeclaims
           namespaces:
             include:
-              - all
-          events:
-            - create
-            - delete
-            - error
-        - name: v1/secrets
-          namespaces:
-            include:
-              - all
+              - default
+              - gaming
+              - home
+              - kube-system
+              - media
+              - monitoring
+              - network
           events:
             - create
             - delete
@@ -128,11 +184,15 @@ spec:
         - name: v1/configmaps
           namespaces:
             include:
-              - all
-            ignore:
-              - rook-ceph
-              - kasten-io
+              - default
+              - gaming
+              - home
+              - kube-system
+              - media
+              - monitoring
+              - network
           events:
+            - create
             - delete
             - error
         - name: apps/v1/daemonsets
@@ -143,28 +203,21 @@ spec:
             - create
             - delete
             - error
+        - name: batch/v1/jobs
+          namespaces:
+            include:
+              - default
+              - collab
+              - home
+              - kube-system
+              - media
+              - monitoring
+              - network
+          events:
+            # - create
             - update
-          updateSetting:
-            includeDiff: true
-            fields:
-              - spec.template.spec.containers[*].image
-        # - name: batch/v1/jobs
-        #   namespaces:
-        #     include:
-        #       - all
-        #     ignore:
-        #       - rook-ceph
-        #       - kube-system
-        #   events:
-        #     - create
-        #     - update
-        #     - delete
-        #     - error
-        #   updateSetting:
-        #     includeDiff: true
-        #     fields:
-        #       - spec.template.spec.containers[*].image
-        #       - status.conditions[*].type
+            # - delete
+            - error
         - name: rbac.authorization.k8s.io/v1/roles
           namespaces:
             include:
@@ -181,14 +234,6 @@ spec:
             - create
             - delete
             - error
-        - name: rbac.authorization.k8s.io/v1/clusterroles
-          namespaces:
-            include:
-              - all
-          events:
-            - create
-            - delete
-            - error
         - name: rbac.authorization.k8s.io/v1/clusterrolebindings
           namespaces:
             include:
@@ -197,7 +242,11 @@ spec:
             - create
             - delete
             - error
-  valuesFrom:
-    - kind: Secret
-      name: "botkube-helm-values"
-      optional: false
+        - name: rbac.authorization.k8s.io/v1/clusterroles
+          namespaces:
+            include:
+              - all
+          events:
+            - create
+            - delete
+            - error
