--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -58,14 +58,17 @@ stringData:
   SECRET_NEXTCLOUD_ADMIN_USER: ENC[AES256_GCM,data:LARuY1I=,iv:bZst8y6pELi4pLG5rfYKHAENeCnjnuS82YMWKzkhSCg=,tag:jll0FQ5iin0eSS3guqYUrw==,type:str]
   SECRET_NEXTCLOUD_ADMIN_PASSWORD: ENC[AES256_GCM,data:P4xnS/6WB2982JCa2gA4Ww==,iv:2TevmRKdMcJz6VciG8zn7ykKNN435zyyfrwPNk9IV/A=,tag:jc8/o9ChMK4KL8A9HftKzQ==,type:str]
   SECRET_HIKVISION_VIEWER_PASSWORD: ENC[AES256_GCM,data:myF2KNCI4/gmNa8fLjk=,iv:j8IwE43g4t28LYJeU9ut3/WQcZ7hlV3/8fqAERcJudA=,tag:BBdVuOl9tqE2LVWvlkKRFw==,type:str]
+  SECRET_BOTKUBE_DISCORD_TOKEN: ENC[AES256_GCM,data:wr26matZxkHL3VHPcUIzgd3+iBgI08m0+HbpUhvSYT3xhDbGBegfw5IO7QbHVTiyxXxX0G34b190v6k=,iv:qjIlMRiNoNF0qZKEXQ6n7yF7L0teXQN7oVrgeBBkWXk=,tag:03JmD71w3lGR3muUte+JTw==,type:str]
+  SECRET_BOTKUBE_DISCORD_BOT_ID: ENC[AES256_GCM,data:I/zwlHrRtellPWavLFJmRgOx,iv:JGzTgAI+gK04MNm3cC/W4iMdEXsgOQKZj86njP13x5g=,tag:LHKtIaYNyNCo3PMLrDPSeQ==,type:int]
+  SECRET_BOTKUBE_DISCORD_CHANNEL_ID: ENC[AES256_GCM,data:tNBMU7ivtLvwYK8KuJpstX1M,iv:5XtAlAJfunnkK/Lrob3GSyejWj8CB8q4kW4EAvcREe8=,tag:JaUbiDt+8KGq54AQ/tqfCg==,type:int]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-19T19:20:10Z"
-  mac: ENC[AES256_GCM,data:fUgtHRAzlW07N6ptYn08VPDKeql6OuB8dp3vOOB3h2YW8yysRk6DukrPsH852eVUgJCP6h8M4P3UZM3sBqkEP02SWYraasNLo7VKR3T8CsUhBQZwIuKJt9artB3LPAmFH5U72+pDbdKrEKmuzJcf62Z14BBwDbur0Z7BLiY59E0=,iv:raUiAysgsySJZaDYTy6+KgMLJzjy2obfAQxradVsc0o=,tag:Scz4xupQWatorV/nPtTW5Q==,type:str]
+  lastmodified: "2021-08-20T19:30:53Z"
+  mac: ENC[AES256_GCM,data:YP86XWFVTauKdCOeGWRe5C2aJYZ4X3t2rkC0m5io1gEHcoMFV4V8rV3f+cqo9ea29iCtxvz6PSCmnUq9iumqZgn0oTq/5gLFUzCMe/SdFaRY2hDIBZUbUQTj4+K6I8sNpwHIDb/p/DnLRuNrVsaPVCb6d46aUEV7T0fHslAMZVg=,iv:MSnoRmnzdt01EnibwZVNikVc715/5iaCKTPsDFlRXhc=,tag:r6OinMneoTArHUarWzCtdQ==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
