--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -59,16 +59,16 @@ stringData:
   SECRET_NEXTCLOUD_ADMIN_PASSWORD: ENC[AES256_GCM,data:P4xnS/6WB2982JCa2gA4Ww==,iv:2TevmRKdMcJz6VciG8zn7ykKNN435zyyfrwPNk9IV/A=,tag:jc8/o9ChMK4KL8A9HftKzQ==,type:str]
   SECRET_HIKVISION_VIEWER_PASSWORD: ENC[AES256_GCM,data:myF2KNCI4/gmNa8fLjk=,iv:j8IwE43g4t28LYJeU9ut3/WQcZ7hlV3/8fqAERcJudA=,tag:BBdVuOl9tqE2LVWvlkKRFw==,type:str]
   SECRET_BOTKUBE_DISCORD_TOKEN: ENC[AES256_GCM,data:wr26matZxkHL3VHPcUIzgd3+iBgI08m0+HbpUhvSYT3xhDbGBegfw5IO7QbHVTiyxXxX0G34b190v6k=,iv:qjIlMRiNoNF0qZKEXQ6n7yF7L0teXQN7oVrgeBBkWXk=,tag:03JmD71w3lGR3muUte+JTw==,type:str]
-  SECRET_BOTKUBE_DISCORD_BOT_ID: ENC[AES256_GCM,data:I/zwlHrRtellPWavLFJmRgOx,iv:JGzTgAI+gK04MNm3cC/W4iMdEXsgOQKZj86njP13x5g=,tag:LHKtIaYNyNCo3PMLrDPSeQ==,type:int]
-  SECRET_BOTKUBE_DISCORD_CHANNEL_ID: ENC[AES256_GCM,data:tNBMU7ivtLvwYK8KuJpstX1M,iv:5XtAlAJfunnkK/Lrob3GSyejWj8CB8q4kW4EAvcREe8=,tag:JaUbiDt+8KGq54AQ/tqfCg==,type:int]
+  SECRET_BOTKUBE_DISCORD_BOT_ID: ENC[AES256_GCM,data:8GooCuaiZbXJMNicwObaG40N,iv:/+tkNF2Tn70HbmcVkMbPKAY4jhJXKcDI+7ika9kTs9A=,tag:S/IKkgQGJee9NTM2V5/fCA==,type:str]
+  SECRET_BOTKUBE_DISCORD_CHANNEL_ID: ENC[AES256_GCM,data:3jPVL01zrTCnEM4efIgLsjB/,iv:py7IJBdyKIPMI2QSMPXScPg3tHs5wKyDfPFSWWQnUvY=,tag:V8tBxwkj1ALo4nwGpSKIGw==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-20T19:30:53Z"
-  mac: ENC[AES256_GCM,data:YP86XWFVTauKdCOeGWRe5C2aJYZ4X3t2rkC0m5io1gEHcoMFV4V8rV3f+cqo9ea29iCtxvz6PSCmnUq9iumqZgn0oTq/5gLFUzCMe/SdFaRY2hDIBZUbUQTj4+K6I8sNpwHIDb/p/DnLRuNrVsaPVCb6d46aUEV7T0fHslAMZVg=,iv:MSnoRmnzdt01EnibwZVNikVc715/5iaCKTPsDFlRXhc=,tag:r6OinMneoTArHUarWzCtdQ==,type:str]
+  lastmodified: "2021-08-20T19:32:19Z"
+  mac: ENC[AES256_GCM,data:W1QGLiGMSH1pQJJm7xQdSI5i/w/gJivfHBKpRJo9BqRYO+KNW3D5zm8IWpwvfjwAxwZWbVUGf29ZtBuz8QJyzuJ3jC9LRjlLM/3ZfP+AvF0WdH8yXQpvYsSu8j+VGHqI1k6B6YCReN7ZujvrH8/UHSUV3ESTtIKgo1jJEtCUZC4=,iv:6d5fz/RXwVygxfCU1F/jOjmlfl4K9ZB7EYUAKLDQW4I=,tag:NzLnD0MGdAIlDhCE8OPstA==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
