add home backups back in and enable minio location

--- a/cluster/apps/kasten-io/k10/profiles/minio.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/minio.yaml
@@ -1,23 +1,22 @@
-# ---
-# kind: Profile
-# apiVersion: config.kio.kasten.io/v1alpha1
-# metadata:
-#   name: minio
-#   namespace: kasten-io
-# spec:
-#   locationSpec:
-#     type: ObjectStore
-#     objectStore:
-#       endpoint: "https://nas.${SECRET_DOMAIN}:9000"
-#       name: backups
-#       objectStoreType: S3
-#       path: k10/39b3ab59-3e5f-447b-88d0-d5ee4b7fff9a/migration
-#       pathType: Directory
-#     credential:
-#       secretType: AwsAccessKey
-#       secret:
-#         apiVersion: v1
-#         kind: secret
-#         name: k10secret-minio
-#         namespace: kasten-io
-#   type: Location
+kind: Profile
+apiVersion: config.kio.kasten.io/v1alpha1
+metadata:
+  name: minio
+  namespace: kasten-io
+spec:
+  locationSpec:
+    type: ObjectStore
+    objectStore:
+      endpoint: https://nas.${SECRET_DOMAIN}:9000
+      name: backups
+      objectStoreType: S3
+      path: k10/2c180da9-7efc-45ef-ad49-e854ecfb1ca0/migration
+      pathType: Directory
+    credential:
+      secretType: AwsAccessKey
+      secret:
+        apiVersion: v1
+        kind: secret
+        name: k10secret-xpdkf
+        namespace: kasten-io
+  type: Location
