--- a/cluster/apps/kasten-io/k10/profiles/kustomization.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/kustomization.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-# resources:
-# - secret.enc.yaml
-# - minio.yaml
+resources:
+  # - secret.enc.yaml
+  - minio.yaml
