add minio secret for s3

--- a/cluster/apps/kasten-io/k10/profiles/minio.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/minio.yaml
@@ -17,6 +17,6 @@ spec:
       secret:
         apiVersion: v1
         kind: secret
-        name: k10secret-xpdkf
+        name: k10-minio-secret
         namespace: kasten-io
   type: Location
