try to force the numbers to not be string

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -59,16 +59,16 @@ stringData:
   SECRET_NEXTCLOUD_ADMIN_PASSWORD: ENC[AES256_GCM,data:P4xnS/6WB2982JCa2gA4Ww==,iv:2TevmRKdMcJz6VciG8zn7ykKNN435zyyfrwPNk9IV/A=,tag:jc8/o9ChMK4KL8A9HftKzQ==,type:str]
   SECRET_HIKVISION_VIEWER_PASSWORD: ENC[AES256_GCM,data:myF2KNCI4/gmNa8fLjk=,iv:j8IwE43g4t28LYJeU9ut3/WQcZ7hlV3/8fqAERcJudA=,tag:BBdVuOl9tqE2LVWvlkKRFw==,type:str]
   SECRET_BOTKUBE_DISCORD_TOKEN: ENC[AES256_GCM,data:wr26matZxkHL3VHPcUIzgd3+iBgI08m0+HbpUhvSYT3xhDbGBegfw5IO7QbHVTiyxXxX0G34b190v6k=,iv:qjIlMRiNoNF0qZKEXQ6n7yF7L0teXQN7oVrgeBBkWXk=,tag:03JmD71w3lGR3muUte+JTw==,type:str]
-  SECRET_BOTKUBE_DISCORD_BOT_ID: ENC[AES256_GCM,data:8GooCuaiZbXJMNicwObaG40N,iv:/+tkNF2Tn70HbmcVkMbPKAY4jhJXKcDI+7ika9kTs9A=,tag:S/IKkgQGJee9NTM2V5/fCA==,type:str]
-  SECRET_BOTKUBE_DISCORD_CHANNEL_ID: ENC[AES256_GCM,data:3jPVL01zrTCnEM4efIgLsjB/,iv:py7IJBdyKIPMI2QSMPXScPg3tHs5wKyDfPFSWWQnUvY=,tag:V8tBxwkj1ALo4nwGpSKIGw==,type:str]
+  SECRET_BOTKUBE_DISCORD_BOT_ID: ENC[AES256_GCM,data:+ozugAUC9Wg/j09BTacDy2Dk,iv:9MDsqMKOW/s78R7tXdVADPOBZ/PwWC1Flbrwre+ysd4=,tag:JAbif3lLQVi6ug+Iq/tZhw==,type:int]
+  SECRET_BOTKUBE_DISCORD_CHANNEL_ID: ENC[AES256_GCM,data:CBu8HQDl1Vgi91OXVj1P7dY0,iv:eO0ninLpdy1NjtEK6oiQBc8rIfRFPd248genW1u4ORo=,tag:7iYZrGoEFme91/7xbfqu+Q==,type:int]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-20T19:32:19Z"
-  mac: ENC[AES256_GCM,data:W1QGLiGMSH1pQJJm7xQdSI5i/w/gJivfHBKpRJo9BqRYO+KNW3D5zm8IWpwvfjwAxwZWbVUGf29ZtBuz8QJyzuJ3jC9LRjlLM/3ZfP+AvF0WdH8yXQpvYsSu8j+VGHqI1k6B6YCReN7ZujvrH8/UHSUV3ESTtIKgo1jJEtCUZC4=,iv:6d5fz/RXwVygxfCU1F/jOjmlfl4K9ZB7EYUAKLDQW4I=,tag:NzLnD0MGdAIlDhCE8OPstA==,type:str]
+  lastmodified: "2021-08-23T16:24:37Z"
+  mac: ENC[AES256_GCM,data:NSKOsqE+u7de3rU0VOjc1xX1PFj1IDOHmkozsmnUI6tXkhpYXrPJLycNhYFwywxlQ6apcyl9NUbasM0q5YbjPmuJLyNaeRzphlF4/C6cfxDc0SXt545LEG4ST8w4PGklEYFwlAQ8A+JWqThJBYk7cbiLFk+VBNkNyvUjEzUc6zg=,iv:bhO40ROgdXyiCHnElLYCcHZjy9goRKuDtor+ipnxrT0=,tag:s0h0J7DTGnK8l9bScwQe/Q==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
