--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -59,16 +59,19 @@ stringData:
   SECRET_NEXTCLOUD_ADMIN_PASSWORD: ENC[AES256_GCM,data:P4xnS/6WB2982JCa2gA4Ww==,iv:2TevmRKdMcJz6VciG8zn7ykKNN435zyyfrwPNk9IV/A=,tag:jc8/o9ChMK4KL8A9HftKzQ==,type:str]
   SECRET_HIKVISION_VIEWER_PASSWORD: ENC[AES256_GCM,data:myF2KNCI4/gmNa8fLjk=,iv:j8IwE43g4t28LYJeU9ut3/WQcZ7hlV3/8fqAERcJudA=,tag:BBdVuOl9tqE2LVWvlkKRFw==,type:str]
   SECRET_BOTKUBE_DISCORD_TOKEN: ENC[AES256_GCM,data:wr26matZxkHL3VHPcUIzgd3+iBgI08m0+HbpUhvSYT3xhDbGBegfw5IO7QbHVTiyxXxX0G34b190v6k=,iv:qjIlMRiNoNF0qZKEXQ6n7yF7L0teXQN7oVrgeBBkWXk=,tag:03JmD71w3lGR3muUte+JTw==,type:str]
-  SECRET_BOTKUBE_DISCORD_BOT_ID: ENC[AES256_GCM,data:+ozugAUC9Wg/j09BTacDy2Dk,iv:9MDsqMKOW/s78R7tXdVADPOBZ/PwWC1Flbrwre+ysd4=,tag:JAbif3lLQVi6ug+Iq/tZhw==,type:int]
-  SECRET_BOTKUBE_DISCORD_CHANNEL_ID: ENC[AES256_GCM,data:CBu8HQDl1Vgi91OXVj1P7dY0,iv:eO0ninLpdy1NjtEK6oiQBc8rIfRFPd248genW1u4ORo=,tag:7iYZrGoEFme91/7xbfqu+Q==,type:int]
+  SECRET_BOTKUBE_DISCORD_BOT_ID: ENC[AES256_GCM,data:HkWpwTUdrB/0aMO4Cb2FHGS4,iv:GWE+bjGG/TmCWCS2zb2ZDPLJOWCUOhv5y33Dw5Qwq9c=,tag:A6xYxguqC0ODjLhkw4h1uA==,type:str]
+  SECRET_BOTKUBE_DISCORD_CHANNEL_ID: ENC[AES256_GCM,data:uxLv7quxPucrVfmf0521hws5,iv:x9p7ipOR6j8LLjxpxRjJgDt6mRiz2cOHXNsiLDIuFoU=,tag:xGjuXPXkyVuOTtA/J8sbwg==,type:str]
+  SECRET_YOURLS_ADMIN_PASSWORD: ENC[AES256_GCM,data:LKD895g51P2r0RnqrYNS,iv:WVDe1RvYVgcHL91a0EQrODfIBfC06KPYSReVv6gvVeM=,tag:jwcvYNwc6cLhRNH3rjpYEQ==,type:str]
+  SECRET_YOURLS_MYSQL_PASSWORD: ENC[AES256_GCM,data:F1bA3M+HYoecBSJ+Jp4DUQ52aCMx/yUH,iv:rK80DzEBpQDFSMDoch/Kpvaev2TedbyTgJaM2Ld/vOQ=,tag:d/HI2OT1iIiDdXdot5ofjA==,type:str]
+  SECRET_YOURLS_MYSQL_ROOT_PASSWORD: ENC[AES256_GCM,data:MEja513S2tEaQqphVery/oZYPPGigHJe,iv:IRAQ8RUb0235I9vPfmp2ROmSG7+VpTI1BMh2yQ4bU9c=,tag:xNqJoV/mAT0mqb/+A0qjqA==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-23T16:24:37Z"
-  mac: ENC[AES256_GCM,data:NSKOsqE+u7de3rU0VOjc1xX1PFj1IDOHmkozsmnUI6tXkhpYXrPJLycNhYFwywxlQ6apcyl9NUbasM0q5YbjPmuJLyNaeRzphlF4/C6cfxDc0SXt545LEG4ST8w4PGklEYFwlAQ8A+JWqThJBYk7cbiLFk+VBNkNyvUjEzUc6zg=,iv:bhO40ROgdXyiCHnElLYCcHZjy9goRKuDtor+ipnxrT0=,tag:s0h0J7DTGnK8l9bScwQe/Q==,type:str]
+  lastmodified: "2021-08-23T20:29:59Z"
+  mac: ENC[AES256_GCM,data:d2Y+cfsSeT8R83hRQ6t1hBWhrwhqBD75wKcWbrURPueVusuEPyr1qqF6LH8W9zVKQn4hDuCWMnbb77yg+ippfuVEAggsKsAojXSLyaLDCa0lXkJllonPrNG8F6HJtzwfodhkFN8I51WmgUzGiUu/QvsWUTcbUdkYlI54zhE0VLg=,iv:uGsuewYnatOX4p7FYlY9++HLTuQFKi4hwnw+mCnD1Yo=,tag:D3ckXT0QerCBHuYLaaNOQQ==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
