--- a/cluster/apps/network/traefik/middlewares/kustomization.yaml
+++ b/cluster/apps/network/traefik/middlewares/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - cloudflare.yaml
+  - cloudflare.yaml
   - rfc1918.yaml
   - redirect-path.yaml
   - internal-auth.yaml
