--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -2,7 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - actions-runner-system.yaml
+  # - actions-runner-system.yaml
+  - backup-system.yaml
   - calico-system.yaml
   - cert-manager.yaml
   - collab.yaml
