--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -36,7 +36,7 @@ spec:
               path: /backup-nas
         ios:
           - module: rbdaio
-            name: k8s-fast-pool
+            name: replicapool
             configuration:
               simultaneousReads: 3
               simultaneousWrites: 3
