add k8s-backups path to location

--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -33,7 +33,7 @@ spec:
             storageId: 1
             module: file
             configuration:
-              path: /backup-nas
+              path: /backup-nas/k8s-backups
         ios:
           - module: rbdaio
             name: replicapool
