--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -116,18 +116,16 @@ spec:
       nameOverride: pushgateway
   postRenderers:
     - kustomize:
-        patchesStrategicMerge:
-          - kind: Deployment
-            apiVersion: apps/v1
-            metadata:
+        patchesJson6902:
+          - target:
+              kind: Deployment
               name: benji-maint
-              namespace: backup-system
-            spec:
-              template:
-                spec:
-                  initContainers:
-                    - name: generate-ceph-files
-                      image: curlimages/curl:7.78.0
-                      imagePullPolicy: Always
-                      command: ["/bin/sh"]
-                      args: ["-c", "curl https://ifconfig.me"]
+            patch:
+              - op: add
+                path: /spec/template/spec/initcontainers
+                value: |
+                  - name: generate-ceph-files
+                    image: curlimages/curl:7.78.0
+                    imagePullPolicy: Always
+                    command: ["/bin/sh"]
+                    args: ["-c", "curl https://ifconfig.me"]
