add initcontainers to the added blurb

--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -122,8 +122,9 @@ spec:
               name: benji-maint
             patch:
               - op: add
-                path: /spec/template/spec/initContainers
+                path: /spec/template/spec
                 value: |
+                  initContainers:
                   - name: generate-ceph-files
                     image: curlimages/curl:7.78.0
                     imagePullPolicy: Always
