--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -116,7 +116,7 @@ spec:
       nameOverride: pushgateway
   postRenderers:
     - kustomize:
-        patchesJson6902:
+        patches:
           - target:
               kind: Deployment
               name: benji-maint
