--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -122,10 +122,10 @@ spec:
               name: benji-maint
             patch:
               - op: add
-                path: /spec/template/spec/initContainers
-                value: |
-                  - name: generate-ceph-files
-                    image: curlimages/curl:7.78.0
-                    imagePullPolicy: Always
-                    command: ["/bin/sh"]
-                    args: ["-c", "curl https://ifconfig.me"]
+                path: /spec/template/spec/initContainers/-
+                value:
+                  name: generate-ceph-files
+                  image: curlimages/curl:7.78.0
+                  imagePullPolicy: Always
+                  command: ["/bin/sh"]
+                  args: ["-c", "curl https://ifconfig.me"]
