change back to json6902

--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -116,7 +116,7 @@ spec:
       nameOverride: pushgateway
   postRenderers:
     - kustomize:
-        patches:
+        patchesJson6902:
           - target:
               kind: Deployment
               name: benji-maint
