--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -120,6 +120,7 @@ spec:
           - target:
               kind: Deployment
               name: benji-maint
+              namespace: backup-system
             patch:
               - op: add
                 path: /spec/template/spec/initContainers/-
